# rust-template

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: basic.rs
