[package]
name = "rs-template"
version = "0.1.0"
edition = "2021"
authors = ["S4H"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "wrap_help", "cargo", "env"] }
dotenvy = "0.15.7"
futures = "0.3.29"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
